# ema

./: .gitignore  main.py  next.config.mjs  pyproject.toml  requirements.txt
.yfinance_cache/: cookies.db  tkr-tz.db
api/: index.py
app/ticker/[ticker]/: page.tsx
ema-web/: package-lock.json  package.json  requirements.txt
ema-web/api/: index.py
ema-web/app/ticker/[ticker]/: page.tsx
pyscript-web/: index.html  main.py  pyscript.toml
pyscript-web/assets/css/: examples.css
streamlit/: .gitignore  main.py  nasdaq.txt  pyproject.toml  tsx.txt  update_stock_lists.sh
